# duck_osmnx

./: .gitignore  .workflow-state.json  CLAUDE.md  README.md  article.txt  benchmark_duckdb.py  debug_access_settings.py  debug_area_data.py  debug_filters.py  debug_pbf_schema.py  debug_simple_area.py  justfile  manifest  mkdocs.yml  pyproject.toml  test_berlin_extraction.py  test_duckdb_optimized.ipynb  test_duckdb_optimized.py
.beads/: config.yaml  issues.jsonl  metadata.json
benchmarks/: bench_pipeline.py  compare.py  profile_simplify_build.py
changelog/: 2026-02-07_simplification-module-improvements.md  2026-04-18_ducknx-cleanup.md  2026-05-05_arrow-features-api.md  2026-05-06_simplify-build-perf-phaseA.md  2026-05-06_simplify-build-perf-phaseB.md
docs/: .readthedocs.yaml  further-reading.md  getting-started.md  index.md  installation.md  internals-reference.md  requirements-docs.txt  user-reference.md
ducknx/: __init__.py  _api_v1.py  _duckdb.py  _errors.py  _http.py  _nominatim.py  _osm_xml.py  _pbf_reader.py  _rust.py  convert.py  distance.py  elevation.py  features.py  geocoder.py  graph.py  io.py  plot.py  projection.py  routing.py  settings.py  simplification.py  stats.py  truncate.py  utils.py  utils_geo.py
environments/: create_conda_env.sh
rust/ducknx-core/: Cargo.toml  pyproject.toml
rust/ducknx-core/src/: cluster.rs  lib.rs  topology.rs
rust/ducknx-core/tests/: topology.rs
tests/: README.md  lint_test.sh  test_arrow_convert.py  test_arrow_pipeline.py  test_consolidate_arrow.py  test_duckdb.py  test_features_vectorized.py  test_http.py  (+8 more)
(+19 files in other folders)
