[package]
name = "ducknx-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ducknx_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py312"] }
numpy = "0.22"
rayon = "1.10"
rstar = "0.12"
geo = "0.28"
wkb = "0.7"

[profile.release]
lto = "thin"
codegen-units = 1
